examples/vp0.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vp0
  name: vp0
spec:
  ports:
  - name: http
    port: 7050
    targetPort: 7050
  - name: http-7051
    port: 7051
    targetPort: 7051
  - name: http-7052
    port: 7052
    targetPort: 7052
  - name: http-7053
    port: 7053
    targetPort: 7053
  selector:
    app: vp0
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    sidecar.istio.io/status: injected-version-root@f1eeb85f62ab-0.2.7-6b145c189aad8306b13af1725123bebfbc7eefd4
  creationTimestamp: null
  name: vp0
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: injected-version-root@f1eeb85f62ab-0.2.7-6b145c189aad8306b13af1725123bebfbc7eefd4
      creationTimestamp: null
      labels:
        app: vp0
    spec:
      containers:
      - args:
        - sh
        - -c
        - sleep 5; peer node start
        image: hyperledger/fabric-peer:x86_64-1.0.0
        name: vp0
        ports:
        - containerPort: 7050
        - containerPort: 7051
        - containerPort: 7052
        - containerPort: 7053
        resources: {}
        volumeMounts:
        - mountPath: /var/run/docker.sock
          name: vp0-claim0
      - args:
        - proxy
        - sidecar
        - -v
        - "2"
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - vp0
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:8080
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 10s
        - --statsdUdpAddress
        - istio-mixer.istio-system:9125
        - --proxyAdminPort
        - "15000"
        image: docker.io/istio/proxy_debug:0.2.7
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources: {}
        securityContext:
          privileged: true
          readOnlyRootFilesystem: false
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      restartPolicy: Always
      volumes:
      - emptyDir:
          sizeLimit: "0"
        name: vp0-claim0
      - emptyDir:
          medium: Memory
          sizeLimit: "0"
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
