examples/ingress_hyperledger.yaml
# Ingress resource (gateway)
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /login
        backend:
          serviceName: composer
          servicePort: 8080
      - path: /chain/blocks/0
        backend:
          serviceName: vp0
          servicePort: 7050
